# Nature

./: .env  .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  README.zh_CN.md  README_EN.md  Rocket.toml  settings.toml
doc/: HowItWork.md  RoadMap.md  architecture.md  compare.md  components.md  conception.md  deploy.md  dev.md  doc-requirement.md  feature.md  feature.mm  guide.md  introduce.ppt.md  miscellaneous.md  name.md  nature.pptx  nature.vpp  other.md  plan.md  rust.md  techPoint.md  test.md  test.md.md  windows.md
doc/EN/: compare.md  introduce.ppt.md
doc/ZH/: NatureValue.pptx  Nature的商业价值.pptx  compare.md  components.md  natureBusinessValue.md  plan.md  techPoint.md
doc/analysis/: synchronous_call.mm
doc/converter/: localRustConverter.md
doc/help/: architecture.md  concept-meta.md  concept.md  concepts.md  howto_localRustConverter.md  reference.md
doc/release/: cloud.md  enterprise.md  release-0.1.md  release-0.2.md  release-03.md  release-plan.md  release.md  requirement.md
doc/test/: debug.md  failed_task.md  failed_task.sh  instance_downstream.rest  manager_instance_by_id.rest  manager_instance_by_key.rest  manager_meta_get_less_than.rest  manager_relation.rest
doc/uml/: biz-class.puml  normal-process.puml
doc_zh/: compare.md  components.md  introduce.ppt.md  name.md  nature.pptx  plan.md
doc_zh/help/: architecture.md  concept-meta.md  concepts.md  for-developer.md  guide.md  meta.md  relation.md
doc_zh/release/: cloud.md
migrations/2018-03-31-070935_create_thing_defines/: down.sql  up.sql
nature/: .env  Cargo.toml
nature-demo/: .env  Cargo.toml  README.md  README_EN.md
nature-demo/doc/: demo-emall.sql  demo-multi-delivery.sql  demo-multi-warehouse.sql  demo-plan.md  demo-sale-statistics.sql  demo-score.sql
nature-demo/doc/EN/emall/: emall-1-order-generate.md  emall-2-pay-the-bill.md  emall-3-stock-out.md  emall-4-delivery.md  emall-5-signed.md  emall-6-statistics.md
nature-demo/doc/ZH/: prepare.md
nature-demo/doc/ZH/audit/: audit-1.md
nature-demo/doc/ZH/emall/: emall-1-order-generate.md  emall-2-order-account.md  emall-3-pay-the-bill.md  emall-4-stock-out.md  emall-5-delivery.md  emall-6-signed.md  emall-appendix-multi-transfer-station.md  emall-appendix-multi-warehouse.md
nature-demo/doc/ZH/sale/: sale_1.md  sale_2.md  sale_3.md  sale_4.md
nature-demo/doc/ZH/score/: score_1_to_persion.md  score_2_person_total_score.md
nature-demo/doc/shell/: emall.sh  temp.sh
nature-demo/doc/shell/common/: get_by_id.sh  get_by_id_wait.sh  input.sh
nature-demo/src/: common.rs  emall.rs  entry.rs  executor.rs  lib.rs  multi_delivery.rs  multi_warehouse.rs  sale_statistics.rs  score.rs
nature-demo/src/emall/: finance.rs  sale.rs  warehouse.rs
nature-demo/src/entry/: finance.rs  order.rs
nature-demo/src/executor/: emall.rs  sale.rs  score.rs
nature-manager/: Cargo.toml  LICENSE_MIT  README.md  package-lock.json  package.json  vetur.config.js  vue.config.js
nature-manager/doc/: Logo.md  dev.md  icon.html  plan.md
nature-manager/public/: index.html
nature-manager/src/: App.vue  config.ts  lib.rs  main.ts
nature-manager/www/: README.md  bootstrap.js  index.html  index.js  package.json  tsconfig.json  vite.config.ts  vue.config.js
nature/src/: common.rs  lib.rs
nature/src/db/: cache.rs  conn.rs  mod.rs  models.rs  mysql_dao.rs  raw_models.rs
nature/src/db/cache/: meta_cache.rs  relation_cache.rs
nature/src/db/models/: downstream.rs  downstream_selector.rs  flow_selector.rs  last_selector.rs  mission.rs  relation.rs  relation_setting.rs  task_type.rs  upstream_selector.rs
nature/src/db/mysql_dao/: instance_dao.rs  meta_dao.rs  relation_dao.rs  task_check.rs  task_dao.rs  task_err_dao.rs
nature/src/db/raw_models/: instance_raw.rs  meta_raw.rs  relation_raw.rs  task.rs  task_error.rs
nature/src/domain/: callback.rs  common.rs  converter.rs  from_instance.rs  instance.rs  instance_locator.rs  meta.rs  meta_setting.rs  meta_type.rs  mod.rs  query.rs  state.rs  target_state.rs  task.rs
nature/src/manager_lib/: meta_service.rs  mod.rs  relation_service.rs  task_err_service.rs  web_controller.rs  web_init.rs
nature/src/nature_lib/: web_controller.rs  web_init.rs
nature/src/nature_lib/dispatcher/: act_batch.rs  act_convert.rs  act_store.rs  act_stored.rs  after_converted.rs  income_controller.rs
nature/src/nature_lib/middleware/: mod.rs
nature/src/nature_lib/middleware/builtin_converter/: merge.rs  mod.rs  scatter.rs  time_range.rs
nature/src/nature_lib/middleware/filter/: builtin_filter.rs  http_filter.rs  mod.rs
nature/src/nature_lib/middleware/filter/builtin_filter/: loader.rs  para_as_key.rs  task_checker.rs
nature/src/nature_lib/task/: cached_key.rs  convert.rs  local_common.rs  loop_task.rs  task_store.rs
nature/src/nature_lib/task/convert/: converted.rs  execute.rs  http_async.rs  task_for_converter.rs
nature/src/retry_lib/: cfg.rs  delay.rs  mod.rs
nature/src/util/: channels.rs  id_tool.rs  instance_para.rs  js_convert.rs  logger.rs  mod.rs  serde_tool.rs  sys_config.rs  web_context.rs
nature/src/util/serde_tool/: str_2_64.rs
nature/src/vo/: instance_condition_vo.rs  instance_vo.rs  mod.rs  self_route_vo.rs
nature/tests/: common.rs  dynamic_config.rs  other.rs
shell/: Nature.jmx  copy-demo-executor.bat  error-to-task.sql  make-release-tool.bat  merge-to-master.bat  publish.bat  schema.sql  to-dev.bat
src/: actor.rs  builtin_converter.rs  builtin_executor.rs  channels.rs  common.rs  controller.rs  converter.rs  executor.rs  filter.rs  flow.rs  lib.rs  retry.rs  rpc.rs  status.rs  support.rs  system.rs  task.rs  test_util.rs  web.rs
src/actor/: batch.rs  convert.rs  parallel.rs  serial.rs  store.rs  store_actor.rs
src/biz/: mod.rs
src/carrier/: mod.rs
test-executor/: Cargo.toml  README.md
test-executor/src/: lib.rs
tests/: common.rs  dynamic_config.rs  error_input.rs  input.rs  integrate_single_input.rs  local_converter.rs  multi_downstream.rs  normal_input.rs  other.rs  save_one.rs  server_starter.rs  single_input.rs  third_lib.rs  web.rs  web_post_and_save_one.rs
(+539 files in other folders)
