[package]
name = "nature"
version = "0.16.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "Nature is a minimalism-program platform for building big business system. It is data-driven, business-oriented and streaming."
repository = "https://github.com/llxxbb/Nature"
readme = "README.md"
license = "MIT,GPL3"
keywords = ["FaaS", "MQ", "BPM", "Workflow"]

[lib]
name = "nature"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[[bin]]
name = "retry"
path = "src/bin/retry.rs"
[[bin]]
name = "nature"
path = "src/bin/nature.rs"

[dependencies]
# normal
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
lru_time_cache = "0.10"
futures = "0.3"
async-trait = "0.1"
itertools = "0.9.0"
uuid = { version = "0.8", features = ["v3"], optional = true }

# for local executor implement
libloading = "0.5"

# log
log = "0.4"
fern = "0.6"        # Simple, efficient logging

#config
dotenv = "0.15"

# web
reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }

#db
mysql_async = "0.23"

[features]
default = ["id64", "mysql"]
#default = ["id128"]
id128 = ["uuid"]
id64 = []
mysql = []
sqlite = []