[package]
name = "nature"
version = "0.20.3"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "Summary says Nature is a tool to ensure final consistency of data. However, it also is a: distribute-stream-engine, business-controll-center, dispatch-center, data-center and low code platform."
repository = "https://github.com/llxxbb/Nature"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["platform", "data", "stream", "distributed", "management"]
categories = ["network-programming", "database", "asynchronous", "concurrency", "development-tools"]

[lib]
name = "nature"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[[bin]]
name = "retry"
path = "src/bin/retry.rs"
[[bin]]
name = "nature"
path = "src/bin/nature.rs"

[dependencies]
# normal
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
lru_time_cache = "0.11"
futures = "0.3"
async-trait = "0.1"
itertools = "0.9.0"
uuid = { version = "0.8", features = ["v3"], optional = true }

# for local executor implement
libloading = "0.5"

# log
log = "0.4"
env_logger = "0.7"

#config
dotenv = "0.15"

# web
reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "3"
actix-rt = "1"
tokio = { version = "0.2", features = ["full"] }

#db
mysql_async = "0.23"

[features]
default = ["mysql"]
mysql = []
sqlite = []