[package]
name = "nature-demo"
version = "1.2.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "Demo to show how to use Nature"
repository = "https://github.com/llxxbb/Nature"
license = "MIT"

[dependencies]
nature = { path = "../nature", version = "1.2.0" }

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15"

# log
log = "0.4"
env_logger = "0.7"

# web
reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }

[lib]
name="nature_demo"
crate-type = ["cdylib"]

[[bin]]
name="nature_demo_restful"
path= "src/bin/restful_executor.rs"