[package]
name = "nature-demo"
version = "1.5.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2021"
description = "Demo to show how to use Nature"
repository = "https://github.com/llxxbb/Nature"
license = "MIT"

[dependencies]
nature = { path = "../nature", version = "1.5.0" }

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15"

# log
log = "0.4"
env_logger = "0.10.0"

# web
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
actix-web = "4.2.1"
actix-rt = "2.7.0"
tokio = { version = "1.23.0", features = ["full"] }

[lib]
name="nature_demo"
path = "src/lib.rs"    # The source file of the target.
crate-type = ["cdylib"]

[[bin]]
name="nature_demo_restful"
path= "src/bin/restful_executor.rs"