[package]
name = "nature"
version = "1.5.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2021"
description = "Nature is a development support platform, it separates data definition from code, so it decouple the data from business system."
repository = "https://github.com/llxxbb/Nature"
readme = "../README.md"
license = "MIT"
keywords = ["platform", "data", "stream", "distributed", "management"]
categories = ["network-programming", "database", "asynchronous", "visualization", "development-tools"]

[lib]
name = "nature"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[[bin]]
name = "retry"
path = "src/bin/retry.rs"
[[bin]]
name = "nature"
path = "src/bin/nature.rs"
[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[dependencies]
# normal
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
lru_time_cache = "0.11"
futures = "0.3"
async-trait = "0.1"
itertools = "0.10"
async-channel = "1.8.0"


# for local executor implement
libloading = "0.7"

# log
log = "0.4"
env_logger = "0.10"

#config
dotenv = "0.15"

# manager_lib
reqwest = { version = "0.11", features = ["blocking", "json"] }
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1.23", features = ["full"] }

#db
mysql_async = "0.31"
mysql_common = { version = "0.29", default-features = false, features = ["chrono"] }