[package]
name = "nature_integrate_test_executor"
version = "1.4.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "Local Executors used by Nature Test"
repository = "https://github.com/llxxbb/Nature"
license = "MIT"


[dependencies]
nature = { path = "../nature", version = "1.4.0" }

[lib]
crate-type = ["cdylib"]